<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="235dp">

            <ImageView
                android:id="@+id/imgFormFoto"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="#00A8EC"
                android:src="@drawable/person" />

            <Button
                android:id="@+id/btnFormFoto"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/formulario_foto_button"
                android:elevation="5dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"/>

        </RelativeLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:text="@string/name"/>

                <EditText
                    android:id="@+id/textName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nameHint"
                    android:inputType="textPersonName"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/activity_label_width"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"/>

                <EditText
                    android:id="@+id/textPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phoneHint"
                    android:inputType="phone"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/activity_label_width"
                    android:layout_height="wrap_content"
                    android:text="@string/address"/>

                <EditText
                    android:id="@+id/textAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/addressHint"
                    android:inputType="textEmailAddress"/>

            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/activity_label_width"
                    android:layout_height="wrap_content"
                    android:text="@string/site"/>

                <EditText
                    android:id="@+id/textSite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/siteHint"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="@dimen/activity_label_width"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/score"/>

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ratingScore"
                    android:layout_gravity="center_horizontal"
                    android:max="10"
                    android:numStars="5"
                    android:rating="2.5"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
